# qpiai-pro-flyte-client

./: .env  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py
app/models/: auto_annotate.py  executions.py  train.py
app/routes/: executions.py  tasks.py
