[tool.poetry]
name = "flyte-api"
version = "0.1.0"
description = "a broker api to interact with flyte execution backend"
authors = ["aswanth <aswanth.k@qpivolta.tech>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = "^0.100.0"
flytekit = "^1.7.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
